test/parser/pattern/bool_literal_error.myte
module test

val (x, true, y): Int = 1